# LoginQtQuick

Login/: CMakeLists.txt  authdata.cpp  authdata.h  authentification.cpp  authentification.h  dto.cpp  dto.h  logincontroller.cpp  logincontroller.h  main.cpp
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  applogin_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: appLogin.cmake
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appLogin.cmake  Qt6_QmlPlugins_Imports_appLogin.rsp
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.rcc/: appLogin_raw_qml_0.qrc  qmake_Login.qrc  qrc_appLogin_raw_qml_0.cpp  qrc_qmake_Login.cpp
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.rcc/qmlcache/: appLogin_Main_qml.cpp  appLogin_qml_loader_file_list.rsp  appLogin_qmlcache_loader.cpp
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Login/: Main.qml  appLogin_qml_module_dir_map.qrc  qmldir
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/appLogin_autogen/: deps  mocs_compilation.cpp
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/meta_types/: appLogin_json_file_list.txt  appLogin_json_file_list.txt.timestamp  qt6applogin_debug_metatypes.json
build-Login-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/qmltypes/: appLogin_foreign_types.txt
(+168 files in other folders)
